--- a/index.html
+++ b/index.html
@@ -15,28 +15,38 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+        <link rel="stylesheet" href="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.css">
+        <link rel="stylesheet" href="jquery.mobile-1.4.5/jquery.mobile.theme-1.4.5.min.css">
+        <script src="jquery.mobile-1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
+    </head>
+    <body>
+
+        <div data-role="page">
+            <div data-role="header"><h1>Page Title</h1></div>
+
+            <div role="main" class="ui-content">
+                <!-- Add your site or application content here -->
+                <h1>цитаты</h1>
+                <a href="#game">начать</a>
+            </div>
+            <div data-role="footer"><h1>Page footer</h1></div>
+
+        </div>
+
+
+        <div data-role="page" id="game">
+            <div role="main" class="ui-content">
+                game here
+            </div>
+        </div>
+
+
     </body>
 </html>
