--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
                 <!-- Add your site or application content here -->
                 <h1>цитаты</h1>
                 <a href="#game">начать</a>
+                <a href="http://bigmir.net">bigmir</a>
+                <a href="http://m.bigmir.net">m.bigmir</a>
             </div>
             <div data-role="footer"><h1>Page footer</h1></div>
 
