--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <div role="main" class="ui-content">
                 <h1>цитаты</h1>
-                <a href="#p1">p1</a>
+                <a href="#v1"  data-transition="slidefade">version 1</a>
             </div>
             <div data-role="footer"><h1>Page footer</h1></div>
 
@@ -61,12 +61,15 @@
         </div>
 
 
-        <div data-role="page" id="p1">
-            <div data-role="header"><h1>Цитаты йопта</h1><a href="#settingsPanel" class="ui-btn ui-icon-gear ui-btn-icon-left ui-shadow ui-corner-all ui-btn-icon-notext"></a></div>
+
+        <div data-role="page" id="v1">
 
             <div data-role="panel" id="settingsPanel">
-                settings!!!
+                Первая версия.
+                Варианты ответа - стандартные кнопки
             </div><!-- /panel -->
+
+            <div data-role="header"><h1>Из какого фильма цитата?</h1><a href="#settingsPanel" class="ui-btn ui-icon-gear ui-btn-icon-left ui-shadow ui-corner-all ui-btn-icon-notext"></a></div>
 
             <div role="main" class="ui-content">
                 <h3>Все в норме? Моей колонии роботов нужны здоровые рабы.</h3>
